--- a/KhabirovaMasterPol.csproj
+++ b/KhabirovaMasterPol.csproj
@@ -34,6 +34,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>KhabirovaMasterPol.App</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
@@ -66,6 +69,9 @@
     </ApplicationDefinition>
     <Compile Include="Access.cs">
       <DependentUpon>KhabirovaModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="AddEditPage.xaml.cs">
+      <DependentUpon>AddEditPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="CostHistory.cs">
       <DependentUpon>KhabirovaModel.tt</DependentUpon>
@@ -123,6 +129,10 @@
     <Compile Include="WorkSpace.cs">
       <DependentUpon>KhabirovaModel.tt</DependentUpon>
     </Compile>
+    <Page Include="AddEditPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
